--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -51,6 +51,9 @@
 					@include gridle_state(tabless-md) {
 						padding:{left: 7px !important;}
 					}
+					@include gridle_state(phoness) {
+						padding:{left:0 !important;}
+					}
 					h2 {
 						float: left;
 						margin:{bottom:0;left:10px;}
