--- a/prod/sass/partial/page-categoria.scss
+++ b/prod/sass/partial/page-categoria.scss
@@ -11,6 +11,9 @@
 			@include gridle(4, tabless-md tabless-min);
 			@include gridle(12, phoness-min);
 			@extend .no-paddings;
+			@include gridle_state(desktopess notebook-min tabless-min) {
+				padding:{right:5px !important;}
+			}
 			.sitio-single {
 				@include gridle(12, phoness-min);
 				@include gridle(12, phoness);
