--- a/prod/sass/partial/nav-colapse.scss
+++ b/prod/sass/partial/nav-colapse.scss
@@ -45,7 +45,7 @@
 				border:0;
 				outline: none;
 				color:$second_color;
-				padding:15 20px;
+				padding:15px 20px;
 				@include placeholder {
 					color: $second_color;
 					font:{family:$primary_font;}
