--- a/prod/sass/partial/about-us.scss
+++ b/prod/sass/partial/about-us.scss
@@ -47,49 +47,48 @@
 						}
 					}
 				}
-				h2 {
+				.content-about {
 					@include gridle(8, desktopess);
 					@include gridle(10, notebook-min); 
 					@include gridle(11, phoness);
-					@include gridle_state(desktopess notebook-min) {
-						float:none;
-						margin:0 auto;
-						display: block;
-						padding:{left:0 !important;}
-					}
-					@include gridle_state(tabless-min) {
-						padding: 0 10px;
-					}
-					@include gridle_state(phoness) {
-						padding: 0 10px;
-					}
-				}
-				.bajada {
-					@include gridle(8, desktopess);
-					@include gridle(10, notebook-min); 
-					@include gridle(11, phoness);
-					@include gridle_state(desktopess notebook-min) {
-						float:none;
-						margin:0 auto;
-						display: block;
-						padding:{left:0;}
-					}
-					margin:{bottom:100px;}
-					p {
-						@include gridle_state(desktopess) {
-							line-height: 30px;
-							letter-spacing: 1px;
+					@extend .no-paddings;
+					@include gridle_float(none);
+					display: block;
+					margin:0 auto;
+					h2 {
+						display:table;
+						width: auto;
+						@include gridle_state(desktopess notebook-min) {
+							padding:{left:0 !important;}
 						}
-						@include gridle_state(notebook-min) {
-							line-height: 23px;
-							font:{size: 13px;}
-						} 
+						@include gridle_state(tabless-min) {
+							padding: 0 10px;
+						}
 						@include gridle_state(phoness) {
 							padding: 0 10px;
-						}   
-						@include gridle_state(phoness-min) {
-							line-height: 20px;
-							font:{size: 11px;} 
+						}
+					}
+					.bajada {
+						@include gridle(12);
+						@extend .no-paddings;
+						
+						margin:{bottom:100px;}
+						p {
+							@include gridle_state(desktopess) {
+								line-height: 30px;
+								letter-spacing: 1px;
+							}
+							@include gridle_state(notebook-min) {
+								line-height: 23px;
+								font:{size: 13px;}
+							} 
+							@include gridle_state(phoness) {
+								padding: 0 10px;
+							}   
+							@include gridle_state(phoness-min) {
+								line-height: 20px;
+								font:{size: 11px;} 
+							}
 						}
 					}
 				}
