--- a/prod/sass/partial/general.scss
+++ b/prod/sass/partial/general.scss
@@ -31,11 +31,11 @@ a {
 	margin:0 auto;
 }
 .highlight {
-	background-color:#000;
-	color:#fff;
-	font:{family:$primary_font;weight:400;size: 26px;style:italic;} 
+	color:$second_color;
+	font:{family:$primary_font;weight:normal; }
+	background-color:$first_color;
 	padding: 0 10px;
-	@include gridle_state(desktopess, notebook-min){
+	@include gridle_state(desktopess, notebook-min) {
 		font:{size: 40px;}
 	}
 }
@@ -43,7 +43,6 @@ a {
 	@extend .highlight;
 	background: $second_color;
 	color:$first_color;
-	display: inline;
 }
 .pattern {
 	@include gridle(12);
@@ -217,7 +216,6 @@ a {
 	-o-box-shadow: 0 2px 2px rgba(204, 204, 204, 0.2);
 }
 
-
 @keyframes hover-btn {
     0% {background-color:$first_color_3;}
     100% {background-color: $first_color;}
@@ -256,4 +254,103 @@ a {
   	50% { transform: translate(0, -7px); }
   	0% { transform:rotate(-45deg);transform-origin:7px 18px; transform-origin:bottom left;}
 }
-  
+
+.slideDown{
+	@include animation(slideDown 1s ease);
+	visibility: visible !important;		
+}
+@keyframes slideDown {
+	0% {
+		@include transform(translateY(-100%));
+	}
+	50%{
+		@include transform(translateY(3%));
+	}
+	65%{
+		@include transform(translateY(-2%));
+	}
+	80%{
+		@include transform(translateY(0%));
+	}
+	95%{
+		@include transform(translateY(0%));
+	}			
+	100% {
+		@include transform(translateY(0%));
+	}		
+}
+.slideRight{
+	@include animation(slideRight 1s ease-in-out);
+	visibility: visible !important;	
+}
+
+@keyframes slideRight {
+	0% {
+		@include transform(translateX(-150%));
+	}
+	50%{
+		@include transform(translateX(8%));
+	}
+	65%{
+		@include transform(translateX(-4%));
+	}
+	80%{
+		@include transform(translateX(4%));
+	}
+	95%{
+		@include transform(translateX(-2%));
+	}			
+	100% {
+		@include transform(translateX(0%));
+	}	
+}
+.fadeIn{
+	@include animation(fadeIn 1.5s ease-in-out);
+	visibility: visible !important;	
+}
+
+@keyframes fadeIn {
+	0% {
+		@include transform(scale(0));
+			
+	}
+	60% {
+		@include transform(scale(1.1));
+	}
+	80% {
+		@include transform(scale(0.9));
+		opacity: 1;	
+	}	
+	100% {
+		@include transform(scale(1));
+		opacity: 1;	
+	}		
+}
+.fadeOut {
+	@include animation(fadeOut 1s ease-in-out);
+	visibility: visible !important;	
+}
+@keyframes fadeOut {
+	0% {
+		@include transform(translateY(100%));
+		opacity: 0.0;	
+	}
+	100% {
+		@include transform(translateY(0%));
+		opacity: 1;	
+	}	
+}
+.fadeOutDown {
+	@include animation(fadeOutDown 0.8s ease-in-out);
+	visibility: visible !important;	
+}
+@keyframes fadeOutDown {
+	0% {
+		@include transform(translateY(-100%));
+		opacity: 0.0;	
+	}
+	100% {
+		@include transform(translateY(0%));
+		opacity: 1;
+	}
+}
